Remove Java 9 collection factories from app paths